linux-2.6 (2.6.15-5) unstable; urgency=low

  [ Martin Michlmayr ]
  * Add a fix for the input support for the ixp4xx beeper driver from
    2.6.16-rc2.
  * Add stable tree 2.6.15.3:
    - Fix extra dst release when ip_options_echo fails (CVE-2006-0454)

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 06 Feb 2006 03:25:54 +0000

linux-2.6 (2.6.15-4) unstable; urgency=low

  [ Jurij Smakov ]
  * [sparc64] Add sparc64-clock-settime.patch to fix the incorrect
    handling of the clock_settime syscall arguments, which resulted
    in a hang when trying to set the date using 'date -s'. Patch
    by David Miller is applied upstream. Thanks to Ludovic Courtes
    and Frans Pop for reporting and testing.
    Ref: http://marc.theaimsgroup.com/?t=113861017400002&r=1&w=2

  [ Christian T. Steigies ]
  * [m68k] update m68k patch and config to 2.6.15
  * [m68k] SCSI drivers need to be built in until ramdisk generator tools
    supports loading scsi modules
  * [m68k] ISCSI and IDE-TAPE don't compile, disabled
  * [m68k] set CC_OPTIMIZE_FOR_SIZE=n
  * [m68k] added vmeints patch which fixes building for vme

  [ maximilian attems ]
  * Use initramfs-tools for ia64 - fixed klibc.
  * Add stable tree 2.6.15.2:
    - Fix double decrement of mqueue_mnt->mnt_count in sys_mq_open
    - (CVE-2005-3356)
    - Mask off GFP flags before swiotlb_alloc_coherent
    - usb-audio: don't use empty packets at start of playback
    - Make second arg to skb_reserved() signed.
    - Input: HID - fix an oops in PID initialization code
    - Fix oops in ufs_fill_super at mount time
    - Kill blk_attempt_remerge()
    - Fix i2o_scsi oops on abort
    - Fix mkiss locking bug
    - Fix timekeeping on sparc64 ultra-IIe machines
    - Someone broke reiserfs v3 mount options and this fixes it
  * Deactivate sparc64-jumping-time.patch, amd64-pppd-fix.patch incl in aboves.
  * Add s390-klibc-buildfix.patch, regression due to header file changes.

  [ Steve Langasek ]