@@ -6,7 +6,11 @@ linux-2.6 (2.6.15-5) unstable; urgency=low
   * Add stable tree 2.6.15.3:
     - Fix extra dst release when ip_options_echo fails (CVE-2006-0454)
 
- -- Martin Michlmayr <tbm@cyrius.com>  Mon, 06 Feb 2006 03:25:54 +0000
+  [ Sven Luther ]
+  * [powerpc] Removed -o root -g root option to mkvmlinuz support patch.
+    (Closes: #351412)
+
+ -- Sven Luther <luther@debian.org>  Tue,  7 Feb 2006 19:23:14 +0000
 
 linux-2.6 (2.6.15-4) unstable; urgency=low
 
